deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: mta-sts
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.5
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
          - name: config
            mountPath: /usr/share/nginx/html/.well-known
      volumes:
        - name: config
          configMap:
            name: config
