service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: mta-sts
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: nginx
  type: ClusterIP
